--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
