--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -2,10 +2,18 @@
   width: 150px;
   height: 50px;
   background-color: #000;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
+  border-radius: 2px;
   padding: 0;
   margin: 0 0 0 auto;
+  cursor: pointer;
+  transition: 0.3s ease;
 }
+
+.profile__add-button:hover {
+  opacity: 0.6;
+}
+
 
 @media screen and (max-width: 740px) {
   .profile__add-button {
