--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,6 +5,12 @@
   border: 1px solid #fff;
   padding: 0;
   margin: 0 0 12px 16px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 320px) {
