--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,9 +1,13 @@
 .profile__title {
+  max-width: 294px;
   font-size: 42px;
   font-weight: 500;
   line-height: 48px;
   margin: 0;
   margin-bottom: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 740px) {
@@ -14,6 +18,7 @@
 
 @media screen and (max-width: 480px) {
   .profile__title {
+    max-width: 189px;
     font-size: 27px;
     line-height: 32.68px;
   }
