--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,9 @@
 .profile__info {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   box-sizing: border-box;
   max-width: 336px;
   min-height: 73px;
@@ -12,5 +12,6 @@
 @media screen and (max-width: 740px) {
   .profile__info {
     justify-content: center;
+    align-items: center;
   }
 }
