--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,8 +1,10 @@
 .profile__subtitle {
+  max-width: 294px;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
   margin: 0;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 320px) {
