--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,6 +1,5 @@
 .element__image {
-  width: 282px;
-  height: 282px;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   border-radius: 10px 10px 0 0;
 }
