--- a/blocks/popup/__input/_type/popup__input_type_job.css
+++ b/blocks/popup/__input/_type/popup__input_type_job.css
@@ -1,6 +1,1 @@
-.popup__input_type_job {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
-  text-align: left;
-}
+.popup__input_type_job {}
