--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
   border: 2px solid #fff;
   border-radius: 2px;
   padding: 0;
-  margin: 0 0 0 auto;
+  margin: 0 0 2px auto;
   cursor: pointer;
   transition: 0.3s ease;
 }
@@ -18,6 +18,6 @@
 @media screen and (max-width: 740px) {
   .profile__add-button {
     width: 282px;
-    margin: 36px auto 0;
+    margin: 24px auto 0;
   }
 }
