--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,14 +1,17 @@
 .profile__subtitle {
-  max-width: 294px;
+  max-width: 336px;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
   margin: 0;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 320px) {
   .profile__subtitle {
+    max-width: 282px;
     font-size: 14px;
     line-height: 16.94px;
   }
