--- a/pages/index.css
+++ b/pages/index.css
@@ -17,7 +17,9 @@
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__edit-image/profile__edit-image.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__add-image/profile__add-image.css);
 
 @import url(../blocks/content/__elements/content__elements.css);
 @import url(../blocks/elements/elements.css);
