--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,6 @@
 .popup {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  display: none;
+  display: flex;
   box-sizing: border-box;
   align-items: center;
   justify-content: center;
@@ -10,5 +10,7 @@
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  transition: 0.3s ease;
+  transition: 0.5s ease;
+  visibility: hidden;
+  opacity: 0;
 }
