--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -4,14 +4,16 @@
   border-radius: 2px;
   background-color: #000;
   color: #fff;
-  margin: 48px 0 0;
+  margin: 30px 0 0;
   padding: 0;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
   text-align: center;
   cursor: pointer;
-  border: 0;
+  border-radius: 2px;
+  border-color: #000000;
+  border-style: solid;
 }
 
 .popup__save-button:hover {
